--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
   </header>
 
 <main id="content">
+  <details>
+    <summary>About this site</summary>
   <p>In 2021, the City of Spokane approved an updated version of the 2009 Sustainability Action Plan. Since the original plan, changes at the national and state level prompted the adoption a goal of 100% renewable electricity by 2030, seeking to establish Spokane as a leader in climate action. From the 2021 Plan's Introduction:</p>
-    <blockquote cite="https://static.spokanecity.org/documents/bcc/committees/public-infrastructure-environment-sustainability/sustainability-action-subcommittee/sap-executive-sumary-2022-01-25.pdf">
+    <blockquote>
       <p>This updated Sustainability Action Plan provides a guide to achieve these new requirements, mitigate risks from climate change, and invest in strengthening our communities. Our objective is to ensure the equitable  prosperity of Spokane residents and the protection of our natural resources for generations to come.</p>
     </blockquote>
-  <p><cite>2021 Sustainability Action Plan/cite></p>
   <p>As Spokane's leading climate change organization representing the interests of concerned citizen's, 350 Spokane felt it necessary to create this Scorecard to better inform the people of Spokane - and its leaders - of the targets and goals that were set and the work that still lie ahead. </p>
-
+  <p><a href="https://my.spokanecity.org/bcc/boards/climate-resilience-and-sustainability-board/sustainability-action-plan/" target="_blank">Sustainability Action Plan</a> website.</p>
+</details>
   <div id="scorecard" class="scorecard"></div>
 </main>
 
