--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
   <p></p>
   <br>
   <div id="scorecard" class="scorecard"></div>
+  <br>
+      <summary>Glossary</summary>
+  <p><b>Baseline:</b> The state the City was on when current goals were set. 2016 in most cases.</p>
+  <p><b>GHG:</b> Greenhouse gas.</p>
+  <p><b>KPI:</b> Key Performance Indicator; a measure of how the city is doing.</p>
+  <p><b>MT:</b> Mega tons; one million metric tons. Typically, C02 (carbon dioxide) or CO2 equivalents.</p>
+</details>
 </main>
 
   <footer>
