--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <br>
   <div id="scorecard" class="scorecard"></div>
   <br>
+  <details>
       <summary>Glossary</summary>
   <p><b>Baseline:</b> The state the City was on when current goals were set. 2016 in most cases.</p>
   <p><b>GHG:</b> Greenhouse gas.</p>
